<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activity.BindSettingActivity">

    <include layout="@layout/best_top_layout" />

    <TextView
        android:id="@+id/setting_bind_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="30dp"
        android:text="12345678915"
        android:textColor="@color/replace_code_text"
        android:textSize="12sp" />

    <RelativeLayout
        android:id="@+id/setting_up_phone"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            style="@style/setting_lin_title_style"
            android:text="@string/setting_up_phone" />

        <ImageView
            style="@style/setting_lin_next_style"
            android:src="@mipmap/next" />
    </RelativeLayout>

    <include layout="@layout/left_lin" />

    <RelativeLayout
        android:id="@+id/setting_sign_wx"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            style="@style/setting_lin_title_style"
            android:text="@string/login_p_wx" />

        <ImageView
            android:id="@+id/bing_setting_1"
            style="@style/setting_lin_next_style"
            android:src="@mipmap/next" />

        <TextView
            android:id="@+id/bing_setting_wx"
            style="@style/setting_lin_right_text_style"
            android:layout_toStartOf="@+id/bing_setting_1"
            android:text="@string/bind_setting"
            android:textColor="@color/l_p_wx" />
    </RelativeLayout>

    <include layout="@layout/left_lin" />

    <RelativeLayout
        android:id="@+id/setting_sign_qq"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:visibility="gone">

        <TextView
            style="@style/setting_lin_title_style"
            android:text="@string/login_p_qq" />

        <ImageView
            android:id="@+id/bing_setting_2"
            style="@style/setting_lin_next_style"
            android:src="@mipmap/next" />

        <TextView
            android:id="@+id/bing_setting_qq"
            style="@style/setting_lin_right_text_style"
            android:layout_toStartOf="@+id/bing_setting_2"
            android:text="@string/bind_setting_no"
            android:textColor="@color/replace_code_text" />
    </RelativeLayout>

    <include
        layout="@layout/left_lin"
        android:visibility="gone" />
</LinearLayout>