<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <include layout="@layout/best_top_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/setting_bind"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                style="@style/setting_lin_title_style"
                android:text="@string/setting_bing" />

            <ImageView
                style="@style/setting_lin_next_style"
                android:src="@mipmap/next" />
        </RelativeLayout>

        <include layout="@layout/left_lin" />

        <RelativeLayout
            android:id="@+id/setting_up_data"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                style="@style/setting_lin_title_style"
                android:text="@string/setting_up_data" />

            <ImageView
                android:id="@+id/setting_1"
                style="@style/setting_lin_next_style"
                android:src="@mipmap/next" />

            <TextView
                android:id="@+id/setting_version"
                style="@style/setting_lin_right_text_style"
                android:layout_toStartOf="@+id/setting_1"
                android:text="@string/setting_version" />
        </RelativeLayout>

        <include layout="@layout/left_lin" />

        <RelativeLayout
            android:id="@+id/setting_above"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                style="@style/setting_lin_title_style"
                android:text="@string/setting_above" />

            <ImageView
                style="@style/setting_lin_next_style"
                android:src="@mipmap/next" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/setting_sign_out"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white">

        <TextView
            style="@style/setting_lin_title_style"
            android:text="@string/setting_sign_out"
            android:textColor="@color/l_p_wx" />

        <ImageView
            style="@style/setting_lin_next_style"
            android:src="@mipmap/next_g" />
    </RelativeLayout>

</LinearLayout>