<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activity.BindNewPhoneActivity">

    <include layout="@layout/best_top_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/bind_phone_text"
        android:textColor="@color/login_hello_t"
        android:textSize="@dimen/main_nickname" />

    <EditText
        android:id="@+id/bing_phone_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/replace_phone_code_text_bg"
        android:hint="@string/input_iphone"
        android:inputType="number"
        android:maxLength="11"
        android:padding="10dp"
        android:textColor="@color/login_hello_t"
        android:textSize="@dimen/l_p_wx" />

    <TextView
        android:id="@+id/bing_phone_tx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="-20dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/bind_phone_bg_un"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/bind_code"
        android:textColor="@android:color/white"
        android:textSize="@dimen/l_p_wx" />
</LinearLayout>