<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activity.AboveActivity">

    <include layout="@layout/best_top_layout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/above_text"
        android:textColor="@color/replace_code_text"
        android:textSize="@dimen/setting_right_text" />

    <RelativeLayout
        android:id="@+id/above_phone_re"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            style="@style/setting_lin_title_style"
            android:text="@string/above_phone" />

        <TextView
            android:id="@+id/above_phone_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:textColor="@color/l_p_wx"
            android:textSize="@dimen/setting_right_text" />
    </RelativeLayout>

    <include layout="@layout/left_lin" />

    <RelativeLayout
        android:id="@+id/above_male_re"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            style="@style/setting_lin_title_style"
            android:text="@string/above_male" />

        <TextView
            android:id="@+id/above_male_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:textColor="@color/l_p_wx"
            android:textSize="@dimen/setting_right_text" />
    </RelativeLayout>

    <include layout="@layout/left_lin" />
</LinearLayout>