<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/login_top_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/login_hello"
        android:textColor="@color/login_hello_t"
        android:textSize="@dimen/login_hello_t" />

    <EditText
        android:id="@+id/login_edit_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="110dp"
        android:layout_marginRight="57dp"
        android:background="@drawable/login_ed_bg"
        android:hint="@string/input_iphone"
        android:inputType="number"
        android:maxLength="11"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColorHint="#999999"
        android:textSize="@dimen/login_ed_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="176dp"
        android:layout_marginRight="57dp"
        android:background="@drawable/login_ed_bg"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/login_edit_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_code"
            android:inputType="number"
            android:maxLength="6"
            android:textColorHint="#999999"
            android:textSize="@dimen/login_ed_text" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:background="@color/login_line_bg" />

        <TextView
            android:id="@+id/login_text_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:minWidth="80dp"
            android:text="@string/login_get_code"
            android:textColor="#999999"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:src="@mipmap/bubble01" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@mipmap/bubble02" />

</RelativeLayout>