<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/l_p_wx"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <com.biotecan.questionnaire.view.CircleImageView
                android:id="@+id/toolbar_open_head"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_gravity="center"
                android:src="@mipmap/head" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/toolbar_open_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_nickname"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/main_nickname" />

                <TextView
                    android:id="@+id/toolbar_open_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/personal_text_bg"
                    android:paddingLeft="10dp"
                    android:paddingTop="2dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="2dp"
                    android:text="@string/main_personal"
                    android:textColor="@color/l_p_wx"
                    android:textSize="@dimen/main_personal" />

            </LinearLayout>

            <ImageView
                android:id="@+id/toolbar_open_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:padding="8dp"
                android:src="@mipmap/setting" />

            <ImageView
                android:id="@+id/toolbar_open_mailbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:visibility="gone"
                android:src="@mipmap/mailbox" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/toolbar_open_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/main_open_num"
                    android:textSize="@dimen/main_open_num" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_open_1"
                    android:textColor="@color/main_open_num"
                    android:textSize="@dimen/main_open_num_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/toolbar_open_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/main_open_num"
                    android:textSize="@dimen/main_open_num" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_open_2"
                    android:textColor="@color/main_open_num"
                    android:textSize="@dimen/main_open_num_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/toolbar_open_donor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/main_open_num"
                    android:textSize="@dimen/main_open_num" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_open_3"
                    android:textColor="@color/main_open_num"
                    android:textSize="@dimen/main_open_num_text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/toolbar_open_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>